--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  extended_nested_scroll_view: ^2.0.1
   sliver_fab: "^1.0.0"
   stretchy_header: ^1.0.8
   font_awesome_flutter: ^8.11.0
